devops/traefik/templates/busybox.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-simple-deployment
  namespace: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver-simple-app
  template:
    metadata:
      labels:
        app: webserver-simple-app
    spec:
      containers:
        - name: webserver-simple-container
          image: python:3
          command:
            - python
            - -m
            - http.server
          ports:
            - containerPort: 8000
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: webserver-simple-service
  namespace: development
spec:
  selector:
    app: webserver-simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
