devops/traefik/templates/services.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  namespace: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity-app
  template:
    metadata:
      labels:
        app: identity-app
    spec:
      containers:
        - name: identity-container
          image: python:3
          command:
            - python
            - -m
            - http.server
          ports:
            - containerPort: 8000
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: development
spec:
  selector:
    app: identity-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
